Fixed scrollbar styling + minor bugs

--- a/projects/ccf-rui/src/app/modules/content/content.component.scss
+++ b/projects/ccf-rui/src/app/modules/content/content.component.scss
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100%;
   padding: 1.5rem;
+  overflow: hidden;
 
   .top-bar {
     display: flex;
