--- a/projects/ccf-rui/src/app/modules/left-sidebar/left-sidebar.component.scss
+++ b/projects/ccf-rui/src/app/modules/left-sidebar/left-sidebar.component.scss
@@ -1,79 +1,80 @@
 :host {
   display: block;
-  overflow-y: scroll;
-  height: 100%;
-  margin-right: 0.375rem;
+  height: calc(100% - 3rem);
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 
-  scrollbar-width: thin;
-  &::-webkit-scrollbar {
-    width: 0.75rem;
-  }
-
-  .container {
-    display: flex;
-    flex-direction: column;
-    margin-left: 1.5rem;
+  .scroll-wrapper {
+    overflow-y: scroll;
+    height: 100%;
     margin-right: 0.375rem;
 
-    mat-divider {
-      border-top-width: 3px;
+    scrollbar-width: thin;
+    &::-webkit-scrollbar {
+      width: 0.75rem;
     }
 
-    & > :first-child {
-      margin-top: 1.5rem;
-    }
-
-    .ccf-organ-selector {
-      margin-top: 1.5rem;
-    }
-
-    .organ-sliders {
+    .container {
       display: flex;
-      height: 3rem;
-      align-items: center;
-    }
+      flex-direction: column;
+      margin-left: 1.5rem;
+      margin-right: 0.375rem;
 
-    mat-expansion-panel {
-      box-shadow: none;
-    }
+      mat-divider {
+        border-top-width: 3px;
+      }
 
-    ::ng-deep .mat-expansion-panel-body {
-      padding: 0;
-    }
+      .ccf-organ-selector {
+        margin-top: 1.5rem;
+      }
 
-    .extraction-menu,
-    .anatomical-structures-menu {
-      ::ng-deep .expansion-header {
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        padding: 0;
-        font-weight: bold;
+      .organ-sliders {
+        display: flex;
         height: 3rem;
+        align-items: center;
+      }
 
-        .mat-expansion-indicator {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          height: 24px;
-          width: 24px;
+      mat-expansion-panel {
+        box-shadow: none;
+      }
+
+      ::ng-deep .mat-expansion-panel-body {
+        padding: 0;
+      }
+
+      .extraction-menu,
+      .anatomical-structures-menu {
+        ::ng-deep .expansion-header {
+          -webkit-user-select: none;
+          -moz-user-select: none;
+          padding: 0;
+          font-weight: bold;
+          height: 3rem;
+
+          .mat-expansion-indicator {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 24px;
+            width: 24px;
+          }
         }
-        
+
+        .expansion-content {
+          margin-bottom: 0.75rem;
+        }
       }
 
-      .expansion-content {
-        margin-bottom: 0.75rem;
+      .extraction-site-tooltip {
+        position: absolute;
+        top: 4rem;
+        left: 27rem;
+        width: 21rem;
+        padding: 1rem;
+        border-radius: 0.5rem;
+        border: 1px solid;
+        z-index: 2;
       }
-    }
-
-    .extraction-site-tooltip {
-      position: absolute;
-      top: 4rem;
-      left: 27rem;
-      width: 21rem;
-      padding: 1rem;
-      border-radius: .5rem;
-      border: 1px solid;
-      z-index: 2;
     }
   }
 }
