--- a/projects/ccf-rui/src/app/modules/right-sidebar/right-sidebar.component.scss
+++ b/projects/ccf-rui/src/app/modules/right-sidebar/right-sidebar.component.scss
@@ -1,105 +1,103 @@
 :host {
   display: block;
-  overflow-y: scroll;
-  height: 100%;
-  margin-right: 0.375rem;
+  height: calc(100% - 3rem);
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 
-  scrollbar-width: thin;
-  &::-webkit-scrollbar {
-    width: 0.75rem;
-  }
-
-  .container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-    margin-left: 1.5rem;
+  .scroll-wrapper {
+    overflow-y: scroll;
+    height: 100%;
     margin-right: 0.375rem;
 
-    mat-divider {
-      border-top-width: 3px;
-      margin-top: .75rem;
-      margin-bottom: 1.5rem;
+    scrollbar-width: thin;
+    &::-webkit-scrollbar {
+      width: 0.75rem;
     }
 
-    & > :first-child {
-      margin-top: 1.5rem;
-    }
+    .container {
+      display: flex;
+      flex-direction: column;
+      min-height: 100%;
+      margin-left: 1.5rem;
+      margin-right: 0.375rem;
 
-    & > :last-child {
-      margin-bottom: 1.5rem;
-    }
-
-    mat-expansion-panel {
-      box-shadow: none;
-
-      mat-expansion-panel-header {
-        padding: 0 0.5rem 0 0;
-        font-weight: bold;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-      }
-    }
-
-    .tags-container {
-      ::ng-deep .mat-expansion-panel-body {
-        padding-left: 0;
-        padding-right: 0;
+      mat-divider {
+        border-top-width: 3px;
+        margin-top: 0.75rem;
+        margin-bottom: 1.5rem;
       }
 
-      .header {
-        height: 3rem;
-      }
+      mat-expansion-panel {
+        box-shadow: none;
 
-      .search {
-        margin-top: 1rem;
-
-        .icon.add {
-          position: absolute;
-          // Sizes and offsets found by experimentation
-          width: 3.625rem;
-          height: 3.625rem;
-          font-size: 3.625rem;
-          top: -1.9375rem;
-          right: -1.1875rem;
+        mat-expansion-panel-header {
+          padding: 0 0.5rem 0 0;
+          font-weight: bold;
+          -webkit-user-select: none;
+          -moz-user-select: none;
         }
       }
 
-      .tag-list {
-        max-height: 7.5rem;
-        margin-left: -1rem;
-      }
+      .tags-container {
+        ::ng-deep .mat-expansion-panel-body {
+          padding-left: 0;
+          padding-right: 0;
+        }
 
-      .legend {
-        display: flex;
-        width: 100%;
-        height: 2.25rem;
-        margin-top: 1.5rem;
-        align-items: center;
+        .header {
+          height: 3rem;
+        }
 
-        .dot {
-          display: inline-block;
-          width: 1.5rem;
-          height: 1.5rem;
-          border-radius: 50%;
+        .search {
+          margin-top: 1rem;
 
-          &.assigned {
+          .icon.add {
+            position: absolute;
+            // Sizes and offsets found by experimentation
+            width: 3.625rem;
+            height: 3.625rem;
+            font-size: 3.625rem;
+            top: -1.9375rem;
+            right: -1.1875rem;
+          }
+        }
+
+        .tag-list {
+          max-height: 7.5rem;
+          margin-left: -1rem;
+        }
+
+        .legend {
+          display: flex;
+          width: 100%;
+          height: 2.25rem;
+          margin-top: 1.5rem;
+          align-items: center;
+
+          .dot {
+            display: inline-block;
+            width: 1.5rem;
+            height: 1.5rem;
+            border-radius: 50%;
+
+            &.assigned {
+              margin-left: 0.5rem;
+            }
+
+            &.added {
+              margin-left: 1rem;
+            }
+          }
+
+          .text {
             margin-left: 0.5rem;
           }
-
-          &.added {
-            margin-left: 1rem;
-          }
-        }
-
-        .text {
-          margin-left: 0.5rem;
         }
       }
-    }
 
-    .filler {
-      flex-grow: 1;
+      .filler {
+        flex-grow: 1;
+      }
     }
   }
 }
