--- a/projects/ccf-rui/src/styles.scss
+++ b/projects/ccf-rui/src/styles.scss
@@ -61,16 +61,17 @@ mat-icon {
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #cdcdcd;
+  -webkit-border-radius: 0.625rem;
+  border-radius: 0.625rem;
 }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    margin: 0;
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
 }
-
 
 /* Global Angular Material Modal Style Overrides */
 @keyframes fadeOut {
@@ -85,9 +86,8 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .modal-animate-fade-out {
-  animation: fadeOut .25s forwards;
+  animation: fadeOut 0.25s forwards;
 }
-
 
 // Workaround for https://github.com/angular/components/issues/16503 and related bugs
 .ng-animating mat-expansion-panel mat-expansion-panel-header {
